David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Estimated_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ship_Date__c</fullName>
    <label>Original Estimated Ship Date</label>
    <type>Date</type>
</CustomField>