David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Estimated_Time_for_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_for_Completion__c</fullName>
    <label>Estimated Time for Completion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Business Days</fullName>
            </value>
            <value>
                <fullName>10 Business Days</fullName>
            </value>
            <value>
                <fullName>15 Business Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>