David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <formula>ProductItem__r.Product_Name__r.Retail_Pr_Ex__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>