David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Exchange_Offer_Declined__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Offer_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchange Offer Declined</label>
    <type>Checkbox</type>
</CustomField>