David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Exchange_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange/Return Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RMAS (Exchange Opportunity)</relationshipLabel>
    <relationshipName>RMAS1</relationshipName>
    <type>Lookup</type>
</CustomField>