David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Field_Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Engineer__c</fullName>
    <formula>TEXT(Opportunity__r.Field_Service_Engineer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Engineer</label>
    <type>Text</type>
</CustomField>