David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Field_Service_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Engineer_Email__c</fullName>
    <label>Field Service Engineer Email</label>
    <type>Email</type>
</CustomField>