David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Field_Service_Engineer_Text__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Engineer_Text__c</fullName>
    <label>Field Service Engineer Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>