David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/First_Call__c.field-meta.xml
<CustomField>
    <fullName>First_Call__c</fullName>
    <label>First Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>