David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/FSE_Email__c.field-meta.xml
<CustomField>
    <fullName>FSE_Email__c</fullName>
    <formula>Opportunity__r.FSE_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSE Email</label>
    <type>Text</type>
</CustomField>