David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/FSE_Phone__c.field-meta.xml
<CustomField>
    <fullName>FSE_Phone__c</fullName>
    <formula>Opportunity__r.FSE_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSE Phone</label>
    <type>Text</type>
</CustomField>