David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/FSE_Portal_Contact__c.field-meta.xml
<CustomField>
    <fullName>FSE_Portal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSE Portal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>