David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Full__c.field-meta.xml
<CustomField>
    <fullName>Full__c</fullName>
    <label>Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>