David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/General_RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>General_RMA_Status__c</fullName>
    <formula>IF(OR( TEXT(Return_from_Sale_Approval__c) = &apos;APPROVED&apos;,  TEXT(Loaner_Action_Approved__c) = &apos;APPROVED&apos;,  TEXT(Rental_Action__c)  = &apos;APPROVED&apos;,  TEXT(Warranty_Claim_Approved__c) = &apos;APPROVED&apos;), &apos;Closed RMA&apos;, &apos;Open RMA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General RMA Status</label>
    <type>Text</type>
</CustomField>