David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Insertion_Tube__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Tube__c</fullName>
    <label>Insertion Tube</label>
    <length>255</length>
    <type>Text</type>
</CustomField>