David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Intacct_RMA_Debug_URL__c.field-meta.xml
<CustomField>
    <fullName>Intacct_RMA_Debug_URL__c</fullName>
    <label>Intacct RMA Debug URL</label>
    <type>Url</type>
</CustomField>