David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Intacct_RMA_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Intacct_RMA_Error_Message__c</fullName>
    <label>Intacct RMA Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>