David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Intacct_RMA_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Intacct_RMA_Sync_Status__c</fullName>
    <label>Intacct RMA Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intacct_Sync_Status</valueSetName>
    </valueSet>
</CustomField>