David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Intacct_RMA_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Intacct_RMA_Timestamp__c</fullName>
    <label>Intacct RMA Timestamp</label>
    <type>DateTime</type>
</CustomField>