David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Intacct_RMA_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_RMA_Transaction_ID__c</fullName>
    <label>Intacct RMA Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>