David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>