David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <formula>Opportunity__r.Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice #</label>
    <type>Text</type>
</CustomField>