David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>