David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Issues_Disclosed_Prior_to_Sale__c.field-meta.xml
<CustomField>
    <fullName>Issues_Disclosed_Prior_to_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issues Disclosed Prior to Sale</label>
    <type>Checkbox</type>
</CustomField>