David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Leakage_Current__c.field-meta.xml
<CustomField>
    <fullName>Leakage_Current__c</fullName>
    <label>Leakage Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>