David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Lens__c.field-meta.xml
<CustomField>
    <fullName>Lens__c</fullName>
    <label>Lens</label>
    <length>255</length>
    <type>Text</type>
</CustomField>