David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner__c.field-meta.xml
<CustomField>
    <fullName>Loaner__c</fullName>
    <formula>ProductItem__r.Sug_Pr_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>