David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Action__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Action__c</fullName>
    <label>Loaner Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge customer for damage</fullName>
            </value>
            <value>
                <fullName>No further action required</fullName>
            </value>
            <value>
                <fullName>Repair without charging customer for damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>