David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Action_Approved__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Action_Approved__c</fullName>
    <label>Loaner Action Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>NOT APPROVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>