David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Asset_Cost__c</fullName>
    <formula>ProductItem__r.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Asset Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>