David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Asset_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaner Asset Number</label>
    <referenceTo>ProductItem__c</referenceTo>
    <relationshipLabel>RMAS (Loaner Asset Number)</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>