David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_changed_to_sale__c.field-meta.xml
<CustomField>
    <fullName>Loaner_changed_to_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaner changed to sale</label>
    <type>Checkbox</type>
</CustomField>