David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Due_Back__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Due_Back__c</fullName>
    <formula>IF( NOT(ISBLANK(Repair_Probe_Asset__c)),  IF(ISBLANK(Date_Repaired_Probe_Shipped__c), Date_Opportunity_Item_Shipped__c + 30, Date_Repaired_Probe_Shipped__c + 7), Date_Opportunity_Item_Shipped__c + 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Due Back</label>
    <type>Date</type>
</CustomField>