David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_ID__c.field-meta.xml
<CustomField>
    <fullName>Loaner_ID__c</fullName>
    <formula>Opportunity__r.Loaner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner ID</label>
    <type>Text</type>
</CustomField>