David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Object__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaner</label>
    <referenceTo>Loaner__c</referenceTo>
    <relationshipLabel>Loaners</relationshipLabel>
    <relationshipName>Loaners</relationshipName>
    <type>Lookup</type>
</CustomField>