David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Probe_Model__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Probe_Model__c</fullName>
    <formula>Loaner_Asset_Number__r.Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Probe Model</label>
    <type>Text</type>
</CustomField>