David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Restock_Fee_Opp_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Restock_Fee_Opp_Invoice__c</fullName>
    <formula>Loaner_Restock_Fee_Opportunity__r.Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner / Restock Fee Opp Invoice #</label>
    <type>Text</type>
</CustomField>