David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Restock_Fee_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Restock_Fee_Opp_Stage__c</fullName>
    <formula>TEXT(Loaner_Restock_Fee_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner / Restock Fee Opp Stage</label>
    <type>Text</type>
</CustomField>