David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Restock_Fee_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Restock_Fee_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice opportunity for damaged loaner</description>
    <label>Loaner / Restock Fee Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RMAS (Loaner / Restock Fee Opportunity)</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>