David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_RMA__c.field-meta.xml
<CustomField>
    <fullName>Loaner_RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loaner RMA</label>
    <referenceTo>RMA__c</referenceTo>
    <relationshipLabel>RMAS (Loaner RMA)</relationshipLabel>
    <relationshipName>LoanerRMAS</relationshipName>
    <type>Lookup</type>
</CustomField>