David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Serial__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Serial__c</fullName>
    <formula>ProductItem__r.Serial_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Serial #</label>
    <type>Text</type>
</CustomField>