David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Loaner_Status_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Status_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaner Status Reviewed</label>
    <type>Checkbox</type>
</CustomField>