David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>TEXT( ProductItem__r.Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>