David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Logo_Override__c.field-meta.xml
<CustomField>
    <fullName>Logo_Override__c</fullName>
    <label>Logo Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MedCorp</fullName>
            </value>
            <value>
                <fullName>Probo Medical</fullName>
            </value>
            <value>
                <fullName>Trisonics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>