David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Needs_to_be_moved_to_this_location__c.field-meta.xml
<CustomField>
    <fullName>Needs_to_be_moved_to_this_location__c</fullName>
    <label>Needs to be moved to this location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Customer Loan / Demo</fullName>
            </value>
            <value>
                <fullName>External Repair / Testing</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>QA-Testing</fullName>
            </value>
            <value>
                <fullName>Repair Area - Cosmetic</fullName>
            </value>
            <value>
                <fullName>Repair Area - Electrical</fullName>
            </value>
            <value>
                <fullName>Repair Area - TEE</fullName>
            </value>
            <value>
                <fullName>Returned to Vendor/Cust</fullName>
            </value>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Out of Flow</fullName>
            </value>
            <value>
                <fullName>MAS</fullName>
            </value>
            <value>
                <fullName>Tulsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>