David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/No_Problems_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Problems_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Problems Found</label>
    <type>Checkbox</type>
</CustomField>