David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/No_Repairs_Needed__c.field-meta.xml
<CustomField>
    <fullName>No_Repairs_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Repairs Needed</label>
    <type>Checkbox</type>
</CustomField>