David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Notify_Rep_to_Create_Label__c.field-meta.xml
<CustomField>
    <fullName>Notify_Rep_to_Create_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Rep to Create Label</label>
    <type>Checkbox</type>
</CustomField>