David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Number_of_Days_to_Get_Tested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Get_Tested__c</fullName>
    <formula>(DATEVALUE(  ProductItem__r.Initial_Date_Tested__c  )) - Date_RMA_Item_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Get Tested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>