David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Opp_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Record_Type__c</fullName>
    <formula>Opportunity__r.Opp_Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Record Type</label>
    <type>Text</type>
</CustomField>