David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RMA</relationshipLabel>
    <relationshipName>RMA</relationshipName>
    <type>Lookup</type>
</CustomField>