David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_No__c</fullName>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity No</label>
    <type>Text</type>
</CustomField>