David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Opportunity_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Phone__c</fullName>
    <formula>Opportunity__r.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Phone</label>
    <type>Text</type>
</CustomField>