David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Opportunity_was_Lost__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_was_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity was Lost</label>
    <type>Checkbox</type>
</CustomField>