David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Original_Time_Warranty_Loaner_Action_App__c.field-meta.xml
<CustomField>
    <fullName>Original_Time_Warranty_Loaner_Action_App__c</fullName>
    <label>Original Time Warranty/Loaner Action App</label>
    <type>DateTime</type>
</CustomField>