David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Other Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>