David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Other_Notes_Cosmetic__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes_Cosmetic__c</fullName>
    <label>Other Notes: Cosmetic</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>