David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/OverDue_Ship__c.field-meta.xml
<CustomField>
    <fullName>OverDue_Ship__c</fullName>
    <formula>IF(ISBLANK(Date_shipped__c), TODAY() - Estimated_Ship_Date__c,Date_shipped__c -Estimated_Ship_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Ship Date Over Due By</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>