David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Owner_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Entity_Name__c</fullName>
    <formula>TEXT(Owner:User.Entity_Name__c)</formula>
    <label>Owner Entity Name</label>
    <type>Text</type>
</CustomField>