David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Part_Name_FSL__c.field-meta.xml
<CustomField>
    <fullName>Part_Name_FSL__c</fullName>
    <label>Part Name (FSL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>