David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Part_Return_Condition__c.field-meta.xml
<CustomField>
    <fullName>Part_Return_Condition__c</fullName>
    <description>This is used to keep track of what status parts are in when they return.</description>
    <inlineHelpText>Why has this part been returned?</inlineHelpText>
    <label>Part Return Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part Tested and Good</fullName>
            </value>
            <value>
                <fullName>Part Not Fitted</fullName>
            </value>
            <value>
                <fullName>Part Dead on Arrival</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>