David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Possible_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Possible_Repairs__c</fullName>
    <label>Possible Repairs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>