David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Preliminary_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Assessment__c</fullName>
    <description>QC&apos;s initial assessment of returned probe</description>
    <label>Preliminary Assessment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>