David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Probe_Deemed_Unrepairable__c.field-meta.xml
<CustomField>
    <fullName>Probe_Deemed_Unrepairable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Probe Deemed Unrepairable</label>
    <type>Checkbox</type>
</CustomField>