David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Probe_Handle__c.field-meta.xml
<CustomField>
    <fullName>Probe_Handle__c</fullName>
    <label>Probe Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>