David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Probe_Model__c.field-meta.xml
<CustomField>
    <fullName>Probe_Model__c</fullName>
    <formula>ProductItem__r.Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probe Model</label>
    <type>Text</type>
</CustomField>