David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Probe_Model_Text__c.field-meta.xml
<CustomField>
    <fullName>Probe_Model_Text__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>