David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Probe_Type__c.field-meta.xml
<CustomField>
    <fullName>Probe_Type__c</fullName>
    <formula>ProductItem__r.Probe_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probe Type</label>
    <type>Text</type>
</CustomField>