David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>ProductItem__r.Product_Family__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>