David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>ProductItem__r.Product2_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>