David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/ProductItem__c.field-meta.xml
<CustomField>
    <fullName>ProductItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMA Item Asset #</label>
    <referenceTo>ProductItem__c</referenceTo>
    <relationshipLabel>RMA</relationshipLabel>
    <relationshipName>RMA</relationshipName>
    <type>Lookup</type>
</CustomField>