David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Purchasing_Return__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchasing Return</label>
    <referenceTo>Purchasing_Return__c</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>