David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Quality_Issue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issue_Notes__c</fullName>
    <label>Quality Issue Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>