David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Quality_Issue_Reported__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issue_Reported__c</fullName>
    <label>Quality Issue Reported</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cosmetic issue</fullName>
            </value>
            <value>
                <fullName>functional issue</fullName>
            </value>
            <value>
                <fullName>shipped wrong probe</fullName>
            </value>
            <value>
                <fullName>customer no longer needed</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>