David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Quality_Team_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quality_Team_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quality Team Owner of RMA</description>
    <label>Quality Team Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>