David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Received_With__c.field-meta.xml
<CustomField>
    <fullName>Received_With__c</fullName>
    <label>Received With</label>
    <type>TextArea</type>
</CustomField>