David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Recommended_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Repairs__c</fullName>
    <label>Recommended Repairs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>