David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Rental_Action_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Rental_Action_Approved_By__c</fullName>
    <label>Rental Action Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>