David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Rental_Changed_to_Sale__c.field-meta.xml
<CustomField>
    <fullName>Rental_Changed_to_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Changed to Sale</label>
    <type>Checkbox</type>
</CustomField>