David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Rental_Due_Back__c.field-meta.xml
<CustomField>
    <fullName>Rental_Due_Back__c</fullName>
    <label>Rental Due Back</label>
    <type>Date</type>
</CustomField>