David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Rental_Order__c.field-meta.xml
<CustomField>
    <fullName>Rental_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Order</label>
    <referenceTo>Rental_Order__c</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>